<resources>
    <string name="app_name">Parsl</string>

    <string name="label_empty_result">Oops, there are no results to display</string>
    <string name="label_error_result">Oops, there was an error fetching the data</string>
    <string name="button_check_again">Check again</string>
    <string name="button_try_again">Try again</string>

    <string name="brand_name">Parsl</string>

    <!-- Register Name Screen -->
    <string name="label_name">What\'s your name?</string>
    <string name="hint_name">Username</string>

    <!-- Register Email  Screen -->
    <string name="label_register">Register</string>
    <string name="hint_email">Enter your email</string>

    <!-- Welcome Screen -->
    <string name="link_login_button">Already have an account? Login</string>
    <string name="label_login_button">Login</string>
    <string name="label_continue_button">Continue</string>
    <string name="label_register_button">Register with Parsl</string>
    <string name="label_register_desc">Dedicated supply chain technology, for the cannabis industry</string>

    <!-- Confirmation Screen-->
    <string name="label_confirmation_header">Almost Done.</string>
    <string name="label_confirmation_desc">We have sent a confirmation link to your email. Please go to your email to complete your registration.</string>
    <string name="label_confirmation_button">I have confirmed the link</string>

    <!-- Login Screen -->
    <string name="hint_login_email_address">Email address</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>
    <string name="label_forgot_password_link">Forgot password?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome_wizard">WelcomeWizardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_permissions">Parsl requires access to the following permissions</string>
    <string name="welcome_screen_two">Click on the \"Scan a range\" if you want to scan more than one tag at once. You can either enter the value manually or scan the first and last tag to perform the actions in one go.</string>

</resources>
